bug 474281 - accessible name of html table cells is incorrectly including descendants, r=aaronlev, r=surkov