accessible/src/base/nsNameUtils.cpp
@@ -73,7 +73,7 @@ PRUint32 nsNameUtils::gRoleToNameRulesMap[] =
   eFromSubtree,      // ROLE_ROWHEADER
   eFromSubtree,      // ROLE_COLUMN
   eFromSubtree,      // ROLE_ROW
-  eFromSubtree,      // ROLE_CELL
+  eNoRule,           // ROLE_CELL
   eFromSubtree,      // ROLE_LINK
   eFromSubtree,      // ROLE_HELPBALLOON
   eNoRule,           // ROLE_CHARACTER
@@ -164,5 +164,6 @@ PRUint32 nsNameUtils::gRoleToNameRulesMap[] =
   eFromSubtree,      // ROLE_OPTION
   eFromSubtree,      // ROLE_RICH_OPTION
   eNoRule,           // ROLE_LISTBOX
-  eNoRule            // ROLE_FLAT_EQUATION
+  eNoRule,           // ROLE_FLAT_EQUATION
+  eFromSubtree       // ROLE_GRID_CELL
 };
